Added ListProducts to swagger
