# docs/swagger.yaml
@@ -29,6 +29,28 @@ info:
   version: "1.0"
 paths:
   /products:
+    get:
+      description: Returns all products in the database
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_v-kuu_mini-marketplace_internal_model.Product'
+            type: array
+        "408":
+          description: Request Timeout
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_http_api.ErrorResponse'
+      summary: Get products
+      tags:
+      - products
     post:
       consumes:
       - application/json
